# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.299 2005/07/07 18:18:15 rocket Exp $

  07 Jul 2005; Eric Edgar <rocket@gentoo.org> targets/grp/grp-chroot.sh,
  targets/stage4/stage4-chroot.sh:
  let grp use the users environment variables and removed extra
  grp_stage23_use from stage4

  07 Jul 2005; Eric Edgar <rocket@gentoo.org>
  targets/stage2/stage2-chroot.sh, targets/stage3/stage3-chroot.sh:
  Remove unnecessary GRP_STAGE23_USE from stage2 and stage3 builds

  07 Jul 2005; Eric Edgar <rocket@gentoo.org> targets/support/rc-update.sh:
  fix bug 98165. Change the separator on rcadd/rcdel from : to | This will
  impact all previous spec files that use this option. Its beejays fault

  06 Jul 2005; Chris Gianelloni <wolf31o2@gentoo.org> arch/ppc.py:
  Changed to use linux32 for ppc32 support when build host is ppc64.

  06 Jul 2005; Chris Gianelloni <wolf31o2@gentoo.org> arch/mips.py,
  arch/x86.py:
  Removed -fomit-frame-pointer from default CFLAGS, since it isn't necessary.

  06 Jul 2005; Eric Edgar <rocket@gentoo.org> modules/generic_stage_target.py:
  Minor cosmetic print statement fixes for readability

  06 Jul 2005; Eric Edgar <rocket@gentoo.org> catalyst,
  modules/catalyst_support.py, modules/generic_stage_target.py:
  Fix None None bug and exception reporting

  06 Jul 2005; Eric Edgar <rocket@gentoo.org> targets/support/create-iso.sh:
  Fix iso creation script.  Case statement out of place
  
  05 Jul 2005; Chris Gianelloni <wolf31o2@gentoo.org> arch/alpha.py,
  arch/amd64.py, arch/hppa.py, arch/ia64.py, arch/mips.py, arch/ppc.py,
  arch/ppc64.py, arch/s390.py, arch/sparc.py, arch/sparc64.py, arch/x86.py,
  catalyst, files/catalyst.conf, modules/builder.py,
  modules/catalyst_support.py, modules/embedded_target.py,
  modules/generic_stage_target.py, modules/generic_target.py,
  modules/grp_target.py, modules/livecd_stage1_target.py,