@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/grp/grp-chroot.sh,v 1.17 2005/07/07 18:18:15 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/grp/grp-chroot.sh,v 1.18 2005/07/07 18:48:08 rocket Exp $
 
 . /tmp/chroot-functions.sh
 
@@ -22,6 +22,10 @@ setup_portage
 
 #turn off auto-use:
 export USE_ORDER="env:pkg:conf:defaults"
+
+unset DISTDIR
+#don't grab MS core fonts, etc.
+export USE="${USE} ${clst_grp_use}"
 	
 if [ "${clst_grp_type}" = "pkgset" ]
 then
@@ -47,10 +51,7 @@ then
 	
 	emerge --usepkg --buildpkg --noreplace --newuse ${clst_myemergeopts} ${clst_grp_packages} || exit 1
 else
-	unset DISTDIR
-	#don't grab MS core fonts, etc.
-	export USE="${USE} ${clst_grp_use} bindist"
-	
+	export USE="${USE} bindist"
 	DISTDIR="/tmp/grp/${clst_grp_target}" emerge --fetchonly ${clst_grp_packages} || exit 1
 	unset PKGDIR
 fi
