@@ -1,5 +1,8 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.299 2005/07/07 18:18:15 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.300 2005/07/07 18:48:08 rocket Exp $
+
+  07 Jul 2005; Eric Edgar <rocket@gentoo.org> targets/grp/grp-chroot.sh:
+  Fix USE flags for grp build
 
   07 Jul 2005; Eric Edgar <rocket@gentoo.org> targets/grp/grp-chroot.sh,
   targets/stage4/stage4-chroot.sh:
